v0.4.0: 自定义知识库 — 文档上传 + 三种切片方式 + 聊天上下文注入
## 后端 (3 文件)
- Rag.java: 新增 chunkSize/chunkOverlap/chunkMethod/content 字段 (MEDIUMTEXT)
- RagService.java: 完整重写
  - 文件上传时实时提取文本 (UTF-8/GBK)
  - 三种切片方式: fixed_size/paragraph/sentence
  - 切片结果存 content 列, 聊天时自动注入 System Prompt
  - updateRag 支持修改切片参数后重新切片
  - chunkText() 工具方法可独立调用
- RagController.java: 上传接口新增 chunkSize/chunkOverlap/chunkMethod 参数

## 前端 (2 文件)
- RagList.vue: 完整重写
  - 上传表单含切片配置: 集合名称/切片方式(下拉)/切片大小/重叠
  - "查看"按钮 → 编辑弹窗 → 可修改切片参数 → 保存触发重新切片
  - 卡片显示: 切片方式 · 大小/片 · 切片数 · 文件大小 · 状态
- api/index.ts: Rag 接口新增 chunkSize/chunkOverlap/chunkMethod/content